--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -4,11 +4,14 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
 
+# pipeline stages
 jobs:
+  # Lint with flake8.
   flake8:
     runs-on: ubuntu-latest
 
@@ -28,3 +31,33 @@ jobs:
 
       - name: Run flake8
         run: flake8 .
+  # Build and push Docker images (FlaskApp & MySQL). 
+  build_and_push:
+    runs-on: ubuntu-latest
+    needs: flake8
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push FlaskApp image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./flaskapp-database/flaskapp
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+
+      - name: Build and push MySQL image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./flaskapp-database/mysql
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/mysql:latest
