--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -37,7 +37,7 @@ jobs:
         ## Runs all tests while tracking coverage for the 'app' module
         run: |
           cd flaskapp-database/flaskapp
-          pytest --cov=app --cov-report=xml  --cov-report=html       
+          PYTHONPATH=. pytest --cov=app --cov-report=xml --cov-report=html
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
