--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           python-version: "3.11"
 
+      # todo: add pytest and pytest-cov inside the requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -60,7 +61,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
+      # todo: add flake8 inside the requirements.txt
       - name: Install flake8
         run: |
           python -m pip install --upgrade pip
