--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: change-me.example.com
+    - host: flaskapp.localtest.me
       http:
         paths:
           - path: /
