--- a/k8s/overlays/production/ingress-patch.yaml
+++ b/k8s/overlays/production/ingress-patch.yaml
@@ -2,7 +2,29 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: flaskapp
+  name: flaskapp-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    # Production environment specific annotations
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/rate-limit: "100"
+    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
 spec:
+  ingressClassName: nginx
   rules:
-    - host: flaskapp.example.com
+    - host: production.local
+      http:
+        paths:
+          - path: /flask(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: flaskapp-service
+                port:
+                  number: 80
