--- a/flaskapp-database/flaskapp/Dockerfile
+++ b/flaskapp-database/flaskapp/Dockerfile
@@ -10,3 +10,5 @@ CMD python -m flask run --host=0.0.0.0 --port=5002
 
 # run new container 
 # docker run -d --name flaskapp --network appnet -p 5002:5002 -e FLASK_APP=app.py -e MYSQL_DATABASE_USER=root -e MYSQL_DATABASE_PASSWORD=root -e MYSQL_DATABASE_DB=BucketList -e MYSQL_DATABASE_HOST=db bucketlist-flask:latest
+
+# link http://testing.local/showSignUp
