--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -2,25 +2,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mysql-service
+  labels:
+    app: mysql
 spec:
   selector:
     app: mysql
   ports:
     - port: 3306
       targetPort: 3306
-      name: mysql
+      protocol: TCP
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flaskapp
+  name: flaskapp-service
 spec:
   selector:
     app: flaskapp
   ports:
-    - port: 80
-      targetPort: 5002
-      name: http
-  type: ClusterIP
+    - protocol: TCP
+      port: 80        # service port (what ingress sees)
+      targetPort: 5002 # container port (your Flask app)
+
