--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -3,15 +3,20 @@ kind: Ingress
 metadata:
   name: flaskapp-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
+  ingressClassName: nginx
   rules:
-  - http:
-      paths:
-      - path: /flask
-        pathType: Prefix
-        backend:
-          service:
-            name: flaskapp-service
-            port:
-              number: 80
+    - host: localhost # or testing.local (mapped in /etc/hosts if needed)
+      http:
+        paths:
+          - path: /flask(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: flaskapp-service
+                port:
+                  number: 80
