--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -1,35 +1,3 @@
-# k8s/base/deployment.yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mysql
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mysql
-  template:
-    metadata:
-      labels:
-        app: mysql
-    spec:
-      containers:
-        - name: mysql
-          image: yehiashaikhoun/mysql:latest
-          imagePullPolicy: Always
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: "root"
-          ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: mysql-data
-              mountPath: /var/lib/mysql
-      volumes:
-        - name: mysql-data
-          persistentVolumeClaim:
-            claimName: mysql-pvc
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -52,25 +20,19 @@ spec:
             - configMapRef:
                 name: flaskapp-config
           env:
-            - name: MYSQL_DATABASE_USER
-              value: myuser
             - name: MYSQL_DATABASE_PASSWORD
-              value: mypass
-            - name: MYSQL_DATABASE_DB
-              value: mydb
-            - name: MYSQL_DATABASE_HOST
-              value: mydb-service
+              value: root  # later replace with Secret
           ports:
             - containerPort: 5002
           readinessProbe:
             httpGet:
-              path: /flask/
+              path: /healthz
               port: 5002
             initialDelaySeconds: 10
             periodSeconds: 10
           livenessProbe:
             httpGet:
-              path: /flask/
+              path: /healthz
               port: 5002
             initialDelaySeconds: 30
             periodSeconds: 30
