--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -24,6 +24,8 @@ spec:
             - configMapRef:
                 name: flaskapp-config
           env:
+            - name: FLASK_APP
+              value: app.py
             - name: MYSQL_DATABASE_PASSWORD
               value: root  # later replace with Secret
           ports:
