--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: localhost # or testing.local (mapped in /etc/hosts if needed)
+    - host: 192.168.49.2.nip.io # or testing.local (mapped in /etc/hosts if needed)
       http:
         paths:
           - path: /flask(/|$)(.*)
