adjust project resources to meet the requirements

--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -6,3 +6,11 @@ resources:
   - pvc.yaml
   - ingress.yaml
   - mysql-deployment.yaml
+
+generatorOptions:
+  disableNameSuffixHash: true
+
+secretGenerator:
+  - name: db-secret
+    envs:
+      - secrets/db.env
