--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -1,3 +1,4 @@
+# k8s/base/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -27,7 +28,10 @@ spec:
             - name: FLASK_APP
               value: app.py
             - name: MYSQL_DATABASE_PASSWORD
-              value: root  # later replace with Secret
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: MYSQL_DATABASE_PASSWORD
           ports:
             - containerPort: 5002
           readinessProbe:
