--- a/k8s/base/mysql-deployment.yaml
+++ b/k8s/base/mysql-deployment.yaml
@@ -1,3 +1,4 @@
+# k8s/base/mysql-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,9 +19,15 @@ spec:
           imagePullPolicy: Always
           env:
             - name: MYSQL_ROOT_PASSWORD
-              value: root
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: MYSQL_ROOT_PASSWORD
             - name: MYSQL_DATABASE
-              value: BucketList
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: MYSQL_DATABASE
           ports:
             - containerPort: 3306
           volumeMounts:
