--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -14,7 +14,6 @@ jobs:
   # Run unit tests with coverage.
   test_and_coverage:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -73,7 +72,7 @@ jobs:
   # Build and push Docker images (FlaskApp & MySQL). 
   build_and_push:
     runs-on: ubuntu-latest
-    # needs: flake8
+    needs: flake8
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
