--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -10,42 +10,61 @@ permissions:
   contents: read
 
 jobs:
-  # test_and_coverage:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.11"
-  #     - run: |
-  #         python -m pip install --upgrade pip
-  #         pip install -r flaskapp-database/flaskapp/requirements.txt
-  #         pip install pytest pytest-cov
-  #     - run: |
-  #         cd flaskapp-database/flaskapp
-  #         PYTHONPATH=. pytest --cov=app --cov-report=xml --cov-report=html
-  #     - uses: actions/upload-artifact@v4
-  #       with:
-  #         name: coverage-report
-  #         path: flaskapp-database/flaskapp/htmlcov
 
-  # flake8:
-  #   runs-on: ubuntu-latest
-  #   needs: test_and_coverage   
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.11"
-  #     - run: |
-  #         python -m pip install --upgrade pip
-  #         pip install flake8
-  #     - run: flake8 .
+  test_and_coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Debug environment
+        run: |
+          echo "Runner: $(uname -a)"
+          docker version
+          docker info
+
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r flaskapp-database/flaskapp/requirements.txt
+          pip install pytest pytest-cov
+      - run: |
+          cd flaskapp-database/flaskapp
+          PYTHONPATH=. pytest --cov=app --cov-report=xml --cov-report=html
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: flaskapp-database/flaskapp/htmlcov
+
+  flake8:
+    runs-on: ubuntu-latest
+    needs: test_and_coverage   
+    steps:
+      - name: Debug environment
+        run: |
+          echo "Runner: $(uname -a)"
+          docker version
+          docker info
+
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - run: flake8 .
 
   build_and_push:
     runs-on: ubuntu-latest
-    #needs: flake8   
+    needs: flake8   
     steps:
+      - name: Debug environment
+        run: |
+          echo "Runner: $(uname -a)"
+          docker version
+          docker info
+
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v2
       - uses: docker/login-action@v2
