--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -40,6 +40,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test_and_coverage   
     steps:
+      - name: Debug flake8
+        run: echo "Runner is up and running on $(uname -a)"
+
       - name: Debug environment
         run: |
           echo "Runner: $(uname -a)"
