--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ ENV/
 
 # Ignore dotenv files
 .env
+
+# Ignore Terraform build + state files
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+crash.log
