--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -82,19 +82,25 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & push flaskapp image
-        run: |
-          docker build \
-            --progress=plain \
-            --no-cache \
-            -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest \
-            ./flaskapp-database/flaskapp
-          docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+        uses: docker/build-push-action@v4
+        with:
+          context: ./flaskapp-database/flaskapp
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+          provenance: false
+          no-cache: true
+          outputs: type=registry
+          build-args: |
+            BUILDKIT_PROGRESS=plain
 
       - name: Build & push mysql image
-        run: |
-          docker build \
-            --progress=plain \
-            --no-cache \
-            -t ${{ secrets.DOCKER_USERNAME }}/mysql:latest \
-            ./flaskapp-database/mysql
-          docker push ${{ secrets.DOCKER_USERNAME }}/mysql:latest
+        uses: docker/build-push-action@v4
+        with:
+          context: ./flaskapp-database/mysql
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/mysql:latest
+          provenance: false
+          no-cache: true
+          outputs: type=registry
+          build-args: |
+            BUILDKIT_PROGRESS=plain
