--- a/k8s/overlays/testing/ingress-patch.yaml
+++ b/k8s/overlays/testing/ingress-patch.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: 192.168.49.2.nip.io  # or testing.local if you map it in /etc/hosts
+    - host: CONTROL_PLANE_IP.nip.io  # Will be replaced by Terraform workflow
       http:
         paths:
           - path: /flask(/|$)(.*)
