--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,17 +46,21 @@ jobs:
 
       - name: Create S3 Backend Bucket
         run: |
-          aws s3api head-bucket --bucket poc-prod-vpc-logs-709efebc --region eu-west-1 2>/dev/null || {
-            echo "Creating S3 bucket: poc-prod-vpc-logs-709efebc"
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          BUCKET_NAME="poc-prod-vpc-logs-${ACCOUNT_ID}-preprod"
+          echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
+
+          aws s3api head-bucket --bucket $BUCKET_NAME --region eu-west-1 2>/dev/null || {
+            echo "Creating S3 bucket: $BUCKET_NAME"
             aws s3api create-bucket \
-              --bucket poc-prod-vpc-logs-709efebc \
+              --bucket $BUCKET_NAME \
               --region eu-west-1 \
               --create-bucket-configuration LocationConstraint=eu-west-1
             aws s3api put-bucket-versioning \
-              --bucket poc-prod-vpc-logs-709efebc \
+              --bucket $BUCKET_NAME \
               --versioning-configuration Status=Enabled
             aws s3api put-bucket-encryption \
-              --bucket poc-prod-vpc-logs-709efebc \
+              --bucket $BUCKET_NAME \
               --server-side-encryption-configuration '{
                 "Rules": [
                   { "ApplyServerSideEncryptionByDefault": { "SSEAlgorithm": "AES256" } }
