--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,6 +17,8 @@ jobs:
   terraform:
     name: Terraform & Ansible
     runs-on: ubuntu-latest
+    
+
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -159,6 +161,15 @@ jobs:
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key ansible/poc-pre-prod-key.pem
+  
+    outputs:
+      ecr_repository_url: ${{ steps.tf_outputs.outputs.ecr_repository_url }}
+      control_plane_ip: ${{ steps.tf_outputs.outputs.control_plane_ip }}
+      worker_ip: ${{ steps.tf_outputs.outputs.worker_ip }}
+      control_plane_private_ip: ${{ steps.tf_outputs.outputs.control_plane_private_ip }}
+      worker_private_ip: ${{ steps.tf_outputs.outputs.worker_private_ip }}
+      ssh_private_key: ${{ steps.tf_outputs.outputs.private_key_path }}
+      
   deploy:
     name: Build and Deploy Flask App to ECR
     runs-on: ubuntu-latest
