--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -140,6 +140,7 @@ jobs:
                     ansible_user: ubuntu
                     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
                     private_ip: ${{ env.WORKER_PRIVATE_IP }}
+                    control_plane_private_ip: ${{ env.CONTROL_PLANE_PRIVATE_IP }}
           EOF
           cat inventory.yml
 
@@ -160,7 +161,7 @@ jobs:
         run: |
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key ansible/poc-pre-prod-key.pem
+          ansible-playbook -i ansible/inventory.yml ansible/playbook.yml --private-key ansible/poc-pre-prod-key.pem -vv
   
     outputs:
       ecr_repository_url: ${{ steps.tf_outputs.outputs.ecr_repository_url }}
